<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" tools:ignore="TypographyDashes">
    <string name="app_name">Settings</string>
    <string name="help">帮助</string>
    <string name="string_help_text">当前应用缺少必要权限</string>
    <string name="quit">退出</string>
    <string name="init_error">初始化错误</string>
    <string name="unauthorized">未授权的</string>
    <string name="rule_init_fail">规则初始化失败</string>
    <string name="setting">设置</string>
    <string name="mode">播报模式</string>
    <string name="sex">播报性别</string>
    <string name="activity_speed_title">播报速度</string>
    <string name="speed">速度</string>
    <string name="wifi">WIFI</string>
    <string name="activity_wifi_title">Please connect to Wi-Fi</string>
    <string name="wifi_connected">已连接</string>
    <string name="confirm">确认</string>
    <string name="wifi_login_del">删除</string>
    <string name="wifi_login_changeAa">大小写</string>
    <string name="wifi_switch">WIFI</string>
    <string name="del_network">不保存网络</string>
    <string name="error_password">密码错误</string>
    <string name="last">上一步</string>
    <string name="next">下一步</string>
    <string name="empty">Empty</string>
    <string name="wifi_connecting">connecting</string>
    <string name="share_name">MIFI</string>
    <string name="wifi_share">移动热点</string>
    <string name="wifi_share_name">热点名称</string>
    <string name="tv_set_password">设置密码</string>
    <string-array name="ap_safe_type">
        <item>None</item>
        <item>WPA2 PSK</item>
    </string-array>
    <string name="error_no_sim">请插入sim卡</string>
    <string name="activity_lg_title">请选择系统语言</string>
    <string name="skip">跳过</string>
    <string name="reset">"重置"</string>
    <string name="master_clear_progress_title">"正在清除"</string>
    <string name="master_clear_progress_text">"请稍候…"</string>
    <string name="master_clear_title">"恢复出厂设置"</string>
    <string name="master_clear_desc">"此操作会清除您翻译机"<b>"内部存储设备"</b>"中的所有数据，如：系统和应用的数据和设置.</string>
    <string name="about">关于</string>
    <string name="version_text">智豆翻译机V%1$s</string>
    <string name="company">香港腾瑞丰公司 版权所有</string>
    <string name="copyright_description">2017 HONGKONG TEKSUN.All Rights Reserved</string>
    <string name="net_error_prompt_text">连接失败，请检查网络\n中英文翻译可正常使用</string>
    <string name="initialization_failed">设备初始化失败</string>
    <string name="equipment_unauthorized">设备未授权</string>
    <string name="retry">重试</string>
    <string name="speaking_prompt_text">倾听中，30秒以内为佳</string>
    <string name="not_support_language">不支持的语言</string>
    <string name="init_ing">init...</string>
    <string name="collection">收藏</string>
    <string name="cancel">取消</string>
    <string name="no_collect">暂无收藏内容</string>
    <string name="Collection_of_success">收藏成功！</string>
    <string name="Collection_of_error">此条收藏失效！</string>
    <string name="Collection_of_limit">收藏夹已满20条！</string>
    <string name="Collection_of_repeat">请勿重复添加！</string>
    <string name="using_uninitialized_translator" translatable="false">Using uninitialized translator</string>
    <string name="none_suitable_sst" translatable="false">There is not suitable stt</string>
    <string name="none_suitable_translate" translatable="false">There is not suitable translate</string>
    <string name="none_suitable_tts" translatable="false">There is not suitable tts</string>
    <string name="stt_init_fail" translatable="false">fail to init stt</string>
    <string name="translate_init_fail" translatable="false">fail to init translate</string>
    <string name="tts_init_fail" translatable="false">fail to init tts</string>
    <string-array name="permissions">
        <item>@string/permission_recode_audio_hint</item>
        <item>@string/permission_get_accounts_hint</item>
        <item>@string/permission_read_phone_hint</item>
        <item>@string/permission_call_phone_hint</item>
        <item>@string/permission_camera_hint</item>
        <item>@string/permission_access_fine_location_hint</item>
        <item>@string/permission_access_coarse_location_hint</item>
        <item>@string/permission_read_external_hint</item>
        <item>@string/permission_white_external_hint</item>
    </string-array>
    <string name="permission_get_accounts_hint" translatable="false">没有此权限，无法开启这个功能，请开启权限。PERMISSION_GET_ACCOUNTS</string>
    <string name="permission_read_phone_hint" translatable="false">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_PHONE_STATE</string>
    <string name="permission_call_phone_hint" translatable="false">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CALL_PHONE</string>
    <string name="permission_camera_hint" translatable="false">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CAMERA</string>
    <string name="permission_access_fine_location_hint" translatable="false">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_FINE_LOCATION</string>
    <string name="permission_access_coarse_location_hint" translatable="false">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_COARSE_LOCATION</string>
    <string name="permission_read_external_hint" translatable="false">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_EXTERNAL_STORAGE</string>
    <string name="permission_white_external_hint" translatable="false">没有此权限，无法开启这个功能，请开启权限。PERMISSION_WRITE_EXTERNAL_STORAGE</string>
    <string name="permission_recode_audio_hint" translatable="false">没有此权限，无法开启这个功能，请开启权限。PERMISSION_RECORD_AUDIO</string>
    <string name="submit">确定</string>
    <string name="unrecognized">无法识别</string>
    <string name="engine_missing">引擎缺失</string>
    <string name="cancel_success">取消成功</string>
    <string name="unknown_exception">未知异常</string>
    <string name="system_is_not_ready">系统未就绪</string>
    <string name="reg_auto_stop">识别已自动结束,请松手</string>
    <string name="cancel_collect">取消收藏</string>
    <string name="usb_debug_enabled" translatable="false">Usb debug mode enabled</string>
    <string name="usb_debug_disabled" translatable="false">Usb debug mode disabled</string>
    <string name="firmware_upgrade">固件升级</string>
    <string name="net_error_hint_before_ready">"网络未就绪，请 检查 wifi配置或插入SIM卡."</string>
    <string name="net_error_check_or_insert_card">"初始化失败，请检查网络或插入SIM卡"</string>
    <string name="set_net">"设置网络"</string>
    <string name="clickable_check_hint">"检查"</string>
    <string name="master_clear_final_desc">"要清空您的所有个人信息和下载的应用吗？此操作无法撤消！"</string>
    <string name="version">"版本号: "</string>
    <string name="clearhis">清空翻译历史</string>
    <string name="master_clear_trslate_his">要清空您的翻译历史记录吗?</string>
    <string name="status_serial_number" msgid="2257111183374628137">"序列号: "</string>
    <string name="mifi" translatable="false">"MIFI"</string>
    <string name="translate">"翻译"</string>
    <string name="record">"录音"</string>
    <string name="start_record">"点击按钮开始录音"</string>
    <string name="confirm_to_save_record">"要保存此录音吗？"</string>
    <string name="record_history">"录音列表"</string>
    <string name="record_language_settings">"语言选择"</string>
    <string name="delete">"删除"</string>
    <string name="delete_success">"删除成功"</string>
    <string name="no_file">"暂无录音文件"</string>
    <string name="saving_record">"正在保存..."</string>
    <string name="recording_is_too_long">"录音太长,自动停止"</string>
    <string name="record_clear_final_desc">"要删除该录音吗？"</string>
    <string name="please_start_record">"请开始说话！"</string>
    <string name="DataTrafficIsCurrentlyBeingUsed">当前正在使用数据流量</string>
    <string name="recording_saved">"录音已保存"</string>
    <string name="recording_saved_failure">"录音保存失败"</string>
    <string name="password_minlength">密码至少8个字符</string>
    <string name="recording_is_aborted">"录音出错，自动停止"</string>
    <string name="date_and_time">Date &amp; time</string>
    <string name="date_time_auto">Automatic</string>
    <string name="date_time_set_date_title">Date</string>
    <string name="date_time_set_date">Set date</string>
    <string name="date_time_set_time_title">Time</string>
    <string name="date_time_set_time">Set time</string>
    <string name="ssh_validate_error" msgid="5716856602742530696">"Please check the time manually for better use of the equipment"</string>
    <string name="mvno_type_none">None</string>
    <string name="apn_predefine_change_dialog_notice">Are you sure to save? Modifications to default APNs may cause connection problems!"</string>
    <string name="apn_port_warning">The port value must be 1-65535!</string>
    <string name="untitled_apn">Untitled</string>
    <string name="apn_settings">APNs</string>
    <string name="apn_edit">Edit access point</string>
    <string name="apn_not_set">Not set</string>
    <string name="apn_name">Name</string>
    <string name="apn_apn">APN</string>
    <string name="apn_http_proxy">Proxy</string>
    <string name="apn_http_port">Port</string>
    <string name="apn_user">Username</string>
    <string name="apn_password">Password</string>
    <string name="apn_server">Server</string>
    <string name="apn_mmsc">MMSC</string>
    <string name="apn_mms_proxy">MMS proxy</string>
    <string name="apn_mms_port">MMS port</string>
    <string name="apn_mcc">MCC</string>
    <string name="apn_mnc">MNC</string>
    <string name="apn_auth_type">Authentication type</string>
    <string name="apn_auth_type_none">None</string>
    <string name="apn_auth_type_pap">PAP</string>
    <string name="apn_auth_type_chap">CHAP</string>
    <string name="apn_auth_type_pap_chap">PAP or CHAP</string>
    <string name="apn_type">APN type</string>
    <string name="apn_protocol">APN protocol</string>
    <string name="apn_roaming_protocol">APN roaming protocol</string>
    <string name="carrier_enabled">APN enable/disable</string>
    <string name="carrier_enabled_summaryOn">APN enabled</string>
    <string name="carrier_enabled_summaryOff">APN disabled</string>
    <string name="bearer">Bearer</string>
    <string name="mvno_type">MVNO type</string>
    <string name="mvno_match_data">MVNO value</string>
    <string name="menu_delete">Delete APN</string>
    <string name="menu_new">New APN</string>
    <string name="menu_save">Save</string>
    <string name="menu_cancel">Discard</string>
    <string name="error_title"></string>
    <string name="error_name_empty">The Name field can\u2019t be empty.</string>
    <string name="error_apn_empty">The APN can\u2019t be empty.</string>
    <string name="error_mcc_not3">MCC field must be 3 digits.</string>
    <string name="error_mnc_not23">MNC field must be 2 or 3 digits.</string>
    <string name="restore_default_apn">Restoring default APN settings.</string>
    <string name="menu_restore">Reset to default</string>
    <string name="restore_default_apn_completed">Reset default APN settings completed.</string>
    <string name="screen_timeout">Sleep</string>
    <string name="region">Region</string>
    <string name="region_switching">"Switching"</string>
    <string name="roaming">Data roaming</string>
    <string name="network_request_timeout">Network request timeout</string>
    <string name="network_access_error">Network access is abnormal</string>
    <string name="untranslated">Unable to translate</string>
    <string name="unspoken">Unable to speech synthesis</string>
    <string name="network_settings_title">Cellular networks</string>
    <string name="update_firmware">"Update firmware?"</string>
    <string name="switch_fail_and_restart_network">"Switch failed, please restart the network."</string>
    <string name="network_do_not_work">The network does not work, please check the network.</string>
    <string name="chat">Conference</string>
    <string name="add_member">Add members</string>
    <string name="member_administration">Member management</string>
    <string name="language_choice">Select language</string>
    <string name="automatically_broadcast">Auto play</string>
    <string name="loading">Loading...</string>
    <string name="quit_the_group">Leave conference</string>
    <string name="zone_auto">Automatic time zone</string>
    <string name="model">"Model : "</string>
</resources>