<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="link.zhidou.translator.ui.activity.WifiListActivity">
    <include layout="@layout/common_action_bar"/>

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/wifi_switch"
        app:track="@drawable/track"
        android:text="@string/wifi_switch"
        style="?attr/wifiSwitch" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:background="?attr/colorWifiDitch" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ListView
            android:id="@+id/list_view"
            android:divider="@drawable/list_divider"
            android:dividerHeight="@dimen/settings_list_item_divider_height"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/ll_wifi_splash"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_wifi_last"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selector"
                android:gravity="center"
                android:text="@string/last" />

            <TextView
                android:id="@+id/tv_wifi_next"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/splash_next"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/next" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
